updates to fastapi grafana and prometheus

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,11 @@ ta
 dagshub
 dash
 dash-bootstrap-components
+prometheus-client
+prometheus-fastapi-instrumentator
+uvicorn
+pydantic
+joblib
+mlflow
 
 ##-e .
