--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,10 @@
 services:
   - type: web
-    name: regime-dash
+    name: regimeforecasting-api
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python dash_app/app.py
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    envVars:
+      - key: MODEL_PATH
+        value: final_model/model.pkl
